--- a/vc-items/src/main/resources/config/application.yml
+++ b/vc-items/src/main/resources/config/application.yml
@@ -6,4 +6,14 @@ server:
   port: 8101
 
 application:
-  description: Rosario Central Products
+  description: Rosario Central Items
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8901/eureka
+
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 10000
+ribbon:
+  ConnectTimeout: 3000
+  ReadTimeout: 10000
